# matlab-path

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  example.py  pyproject.toml
dev/: references.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/matlab_path/: __init__.py  main.py
src/matlab_path/matlab/: __init__.py  attributes.py  nodes.py  parser.py  utils.py
src/matlab_path/matlab/data/: __init__.py  references.json
test/: conftest.py  test.py  test_basic_resolutions.py  test_classes.py  test_wrong_resolutions.py
test/workspace/: class0.m  function0.m  myclass.m  myfunction.m  myscript.m
test/workspace/base/: baseclass1.m  baseclass2.m  basefunction1.m  basefunction2.m  basefunction3.m  class4.m  class5.m  function2.m  function3.m  function4.m
test/workspace/base/+package2/: class00.m  function00.m  function01.m
test/workspace/base/+package2/+package3/: class00.m  function01.m
test/workspace/base/+packagebase/: Contents.m  pbclass.m  pbfunction1.m  pbfunction2.m
test/workspace/base/+packagebase/+subpackagebase/: pbsclass.m  pbsfunction.m
test/workspace/base/@class3/: class3.m  classstatic.m  method.m
test/workspace/base/@classfolderbase/: classfolderbase.m  classmethod.m  classstatic.m
test/workspace/base/private/: baseprivatefunction.m  privatefunction.m
test/workspace/core/: function11.m  functioncore.m
test/workspace/core/+package1/: class.m  function22.m
test/workspace/core/+package1/+package3/: class8.m
test/workspace/core/+package1/+package3/+package4/: class7.m
test/workspace/core/+package1/@class6/: class6.m
test/workspace/core/+packagecore/: pcclass.m  pcfunction.m
test/workspace/core/+packagecore/+subpackagecore/: spcclass.m
test/workspace/core/+packagecore/+subpackagecore/+subsubpackagecore/: sspcclass.m
test/workspace/core/+packagecore/@pclassfoldercore/: pclassfoldercore.m
test/workspace/core/@badclass/: method1.m
test/workspace/core/@badclassfolder/: badclass_.m
test/workspace/core/@class1/: function222.m
test/workspace/core/@classfoldercore/: staticmethod.m
tests/: test_basic_resolutions.py  test_classes.py  test_wrong_resolutions.py
