[tool.poetry]
name = "matlab-search-path-resolver"
version = "0.1.0"
description = "Navigate the MATLAB search path in Python."
authors = ["Mark Hu <watermarkhu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/watermarkhu/matlab-path"
documentation = "https://"
keywords = ["MATLAB", "path", "textmate"]
packages = [{include = "matlab_path", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
textmate-grammar-python = { path = "../textmate-grammar-python/", develop = true }

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.1,<9.0.0"

[tool.poetry.group.dev.dependencies]
poetry-bumpversion = "^0.3.2"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
ruff = "^0.3.0"
tox = "^4.14.1"
selenium = "^4.18.1"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
sphinx-autodoc2 = "^0.5.0"
myst-parser = "^2.0.0"
furo = "^2024.1.29"
sphinxcontrib-mermaid = "^0.9.2"

[tool.poetry_bumpversion.file."src/matlab_path/__init__.py"]

[tool.ruff]
include = ["pyproject.toml", "src/matlab_path/**/*.py"]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E111", "E114", "E117", "E501", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
ignore_missing_imports = true
exclude = ["test/*", "docs/*", "example.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
