[project]
name = "MetLab"
version = "0.1.0"
description = "Metadata analysis on MATLAB files"
authors = [
    { name = "Mark Hu", email = "watermarkhu@gmail.com" }
]
dependencies = [
    "textmate-grammar-python>=0.5.1",
    "pre-commit>=3.7.0",
]
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.3.1",
    "pre-commit>=3.6.0",
    "tox>=4.14.1",
    "selenium>=4.18.1",
    "ipykernel>=6.29.4",
]

[tool.rye.workspace]
mambers = ["textmate-grammar-python"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/matlab_path"]


[tool.ruff]
include = ["pyproject.toml", "src/matlab_path/**/*.py"]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E111", "E114", "E117", "E501", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
ignore_missing_imports = true
exclude = ["test/*", "docs/*", "example.py"]
